# aoc-2022-solutions

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  common.h  conanfile.txt  day1.cc  day2.cc  day2.h  day2_part1.cc  day2_part2.cc  day3.cc  day3.h  day3_part1.cc  day3_part2.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  day8.h  day8_part1.cc  day8_part2.cc  line.h  test.sh
